--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Decor Edits</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  
   <style>
     body { background-color: #0d1117; color: #e6edf3; font-family: 'Poppins', sans-serif; }
     .navbar { background-color: #161b22; border-bottom: 1px solid #30363d; }
@@ -199,5 +200,7 @@ document.getElementById("filterBtn").addEventListener("click", () => {
   loadProducts(term, min, max);
 });
 </script>
+  <script type="module" src="product.js"></script>
 </body>
 </html>
+
