--- a/index.html
+++ b/index.html
@@ -2,37 +2,90 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TheDecor - Admin & Products</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The Decor Edits - Home</title>
+
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <style>
+    body {
+      background-color: #0d1117;
+      color: #e6edf3;
+      font-family: 'Poppins', sans-serif;
+    }
+    .navbar { background-color: #161b22; border-bottom: 1px solid #30363d; }
+    .navbar-brand { color: #1f6feb !important; font-weight: 600; }
+    .form-control {
+      background-color: #0d1117;
+      color: #e6edf3;
+      border: 1px solid #30363d;
+    }
+    .card {
+      background-color: #161b22;
+      border: 1px solid #30363d;
+      border-radius: 10px;
+      transition: transform 0.2s;
+    }
+    .card:hover { transform: scale(1.02); }
+    .btn-success { background-color: #1f6feb; border: none; }
+    .btn-success:hover { background-color: #388bfd; }
+    .product-img {
+      height: 220px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+  </style>
 </head>
+
 <body>
-  <h1>🛋️ TheDecor Products</h1>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <div class="container-fluid px-4">
+    <a class="navbar-brand" href="#">🛋️ The Decor Edits</a>
+  </div>
+</nav>
 
-  <section id="add-product">
-    <h3>Add Product</h3>
-    <input type="text" id="name" placeholder="Product Name" />
-    <input type="number" id="price" placeholder="Price" />
-    <input type="file" id="imageFile" accept="image/*" />
-    <button id="addProductBtn">Add Product</button>
-  </section>
+<!-- Hero -->
+<div class="text-center mt-4">
+  <h2 class="text-info">Welcome to The Decor Edits ✨</h2>
+  <p class="text-secondary">Explore unique products uploaded by our Admin.</p>
+</div>
 
-  <hr />
+<!-- Filters -->
+<div class="container mt-4">
+  <div class="row g-3 align-items-center">
+    <div class="col-md-4">
+      <input type="text" id="searchBox" class="form-control" placeholder="Search products...">
+    </div>
+    <div class="col-md-3">
+      <input type="number" id="minPrice" class="form-control" placeholder="Min Price ₹">
+    </div>
+    <div class="col-md-3">
+      <input type="number" id="maxPrice" class="form-control" placeholder="Max Price ₹">
+    </div>
+    <div class="col-md-2">
+      <button id="filterBtn" class="btn btn-success w-100">Filter</button>
+    </div>
+  </div>
+</div>
 
-  <h3>All Products</h3>
-  <div id="productList"></div>
+<!-- Product Grid -->
+<div class="container mt-5">
+  <div class="row g-4" id="productList"></div>
+</div>
 
-  <script type="module">
-  // Import Firebase modules
+<!-- Firebase Script -->
+<script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
   import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-  // Your Firebase Config
+  // Firebase Configuration
   const firebaseConfig = {
     apiKey: "AIzaSyDRVCbBDzuqIG2mYBLDirReunh4oLJa5Wk",
     authDomain: "thedecor-6d3f4.firebaseapp.com",
     projectId: "thedecor-6d3f4",
-    storageBucket: "thedecor-6d3f4.appspot.com",
+    storageBucket: "thedecor-6d3f4.firebasestorage.app",
     messagingSenderId: "993017983175",
     appId: "1:993017983175:web:3d5fcb9977236aa84b8ee2",
     measurementId: "G-YT7CBME3LK"
@@ -44,58 +97,64 @@
 
   // Load products from Firestore
   async function loadProducts(searchTerm = "", min = 0, max = Infinity) {
+    const productList = document.getElementById("productList");
+    productList.innerHTML = "<p class='text-center text-secondary'>Loading...</p>";
+
     const querySnapshot = await getDocs(collection(db, "products"));
-    const products = [];
+    let products = [];
     querySnapshot.forEach((doc) => {
       const data = doc.data();
-      data.id = doc.id;
-      products.push(data);
+      products.push({
+        name: data.name,
+        desc: data.desc,
+        price: data.price,
+        link: data.link,
+        mainImage: data.mainImage
+      });
     });
 
-    // Filter products
+    // Apply filters
     const filtered = products
       .filter(p => p.name.toLowerCase().includes(searchTerm.toLowerCase()))
       .filter(p => p.price >= min && p.price <= max);
 
-    const list = document.getElementById("productList");
-    list.innerHTML = "";
+    productList.innerHTML = "";
     if (filtered.length === 0) {
-      list.innerHTML = `<p class="text-center text-secondary">No products found.</p>`;
+      productList.innerHTML = `<p class="text-center text-secondary">No products found.</p>`;
       return;
     }
 
+    // Display products
     filtered.forEach(p => {
-      list.innerHTML += `
+      productList.innerHTML += `
         <div class="col-md-4">
           <div class="card p-3 shadow-sm h-100">
-            <img src="${p.image}" class="product-img mb-3" alt="">
+            <img src="${p.mainImage}" class="product-img mb-3" alt="${p.name}">
             <h5 class="text-warning">${p.name}</h5>
-            <p class="text-light">${p.description?.substring(0,70) || ""}...</p>
+            <p class="text-light">${p.desc?.substring(0, 70) || ""}...</p>
             <p class="text-info fw-bold">₹${p.price}</p>
-            <a href="${p.amazonLink || "#"}" target="_blank" class="btn btn-sm btn-success w-100">🛒 Buy Now</a>
+            <a href="${p.link || "#"}" target="_blank" class="btn btn-success w-100">🛒 Buy Now</a>
           </div>
         </div>`;
     });
   }
 
-  // Search + Filter listeners
-  document.getElementById("searchBox").addEventListener("input", e => {
-    const term = e.target.value.trim();
-    const min = parseFloat(document.getElementById("minPrice").value) || 0;
-    const max = parseFloat(document.getElementById("maxPrice").value) || Infinity;
-    loadProducts(term, min, max);
-  });
+  // Event Listeners
   document.getElementById("filterBtn").addEventListener("click", () => {
-    const term = document.getElementById("searchBox").value.trim();
+    const search = document.getElementById("searchBox").value.trim();
     const min = parseFloat(document.getElementById("minPrice").value) || 0;
     const max = parseFloat(document.getElementById("maxPrice").value) || Infinity;
-    loadProducts(term, min, max);
+    loadProducts(search, min, max);
   });
 
-  // Load products on page start
+  document.getElementById("searchBox").addEventListener("input", () => {
+    const search = document.getElementById("searchBox").value.trim();
+    loadProducts(search);
+  });
+
+  // Load on page start
   loadProducts();
 </script>
 
 </body>
 </html>
-
